add repo_name in github_events_state table
